objects/FSL_SRT_History_Tracking__c.object
<CustomObject>
    <description>This object used to track the FSL History field tracking changes</description>
    <fields>
        <fullName>FSL_SRT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL SRT</label>
        <referenceTo>FSL_SRT__c</referenceTo>
        <relationshipLabel>FSL SRT History Tracking</relationshipLabel>
        <relationshipName>FSL_SRT_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Modified_by__c</fullName>
        <label>Modified by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Value__c</fullName>
        <label>Original Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRT_Notes_Updated__c</fullName>
        <label>SRT Notes Updated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FSL_SRT_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FSL SRT History Tracking</label>
    <nameField>
        <displayFormat>SRT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL SRT History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>